[gd_scene load_steps=18 format=3 uid="uid://du18olc2mhd80"]

[ext_resource type="Texture2D" uid="uid://dr81umld7si3" path="res://sprites/T1P1.png" id="1_r0x5m"]
[ext_resource type="Script" uid="uid://o4mdidl1gn3a" path="res://scripts/GridCell.gd" id="1_yyih5"]
[ext_resource type="Texture2D" uid="uid://c5gka0v4w7gw5" path="res://sprites/T1P2.png" id="2_3mrqo"]
[ext_resource type="Script" uid="uid://b8gbogul3nfxi" path="res://scripts/PieceNhac.gd" id="2_lvtmh"]
[ext_resource type="Texture2D" uid="uid://dbd6a724eik12" path="res://sprites/T1P3.png" id="3_joorw"]
[ext_resource type="Texture2D" uid="uid://dly76sobidb1w" path="res://sprites/T1P4.png" id="4_2vekm"]
[ext_resource type="Texture2D" uid="uid://cm10pi088laug" path="res://sprites/T1P5.png" id="5_yx171"]
[ext_resource type="Texture2D" uid="uid://c68j6v6fnxteq" path="res://sprites/T1P6.png" id="6_yhmtn"]
[ext_resource type="Texture2D" uid="uid://dda5wyqqh2x0d" path="res://sprites/T2P1.png" id="7_gwjdr"]
[ext_resource type="Texture2D" uid="uid://sptqk7jvf70p" path="res://sprites/T2P2.png" id="8_lvtmh"]
[ext_resource type="Texture2D" uid="uid://dv1o7sql2ovrd" path="res://sprites/T2P3.png" id="9_yyih5"]
[ext_resource type="Texture2D" uid="uid://c3rvh16p1mqik" path="res://sprites/T2P4.png" id="10_qjyg3"]
[ext_resource type="Texture2D" uid="uid://4by4rcafyigg" path="res://sprites/T2P5.png" id="11_elkpi"]
[ext_resource type="Texture2D" uid="uid://cllu7ba35gqwb" path="res://sprites/T2P6.png" id="12_0yprl"]
[ext_resource type="Script" uid="uid://cxsbcxoq8e8s5" path="res://scripts/Player.gd" id="15_qjyg3"]
[ext_resource type="Script" uid="uid://bcxc8g3n6muho" path="res://scripts/gameManager.gd" id="16_elkpi"]
[ext_resource type="Script" uid="uid://dn283rupsatfp" path="res://label.gd" id="17_0yprl"]

[node name="Game" type="Node2D"]

[node name="Grid" type="Node" parent="."]

[node name="GridRedBar1" type="ColorRect" parent="Grid"]
offset_left = 318.0
offset_top = 104.0
offset_right = 367.0
offset_bottom = 617.0
color = Color(1, 0, 0, 1)

[node name="GridRedBar2" type="ColorRect" parent="Grid"]
offset_left = 606.0
offset_top = 108.0
offset_right = 655.0
offset_bottom = 617.0
color = Color(1, 0, 0, 1)

[node name="GridGreenBar1" type="ColorRect" parent="Grid"]
offset_left = 159.0
offset_top = 241.0
offset_right = 920.0
offset_bottom = 281.0
scale = Vector2(0.88, 1)
color = Color(0, 1, 0, 1)

[node name="GridGreenBar2" type="ColorRect" parent="Grid"]
offset_left = 166.0
offset_top = 462.0
offset_right = 922.0
offset_bottom = 502.0
scale = Vector2(0.880001, 1)
color = Color(0, 1, 0, 1)

[node name="Cells" type="Node" parent="."]

[node name="Cell1x1" type="Node2D" parent="Cells"]
position = Vector2(228, 150)
script = ExtResource("1_yyih5")

[node name="ColorRect" type="ColorRect" parent="Cells/Cell1x1"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Cell1x2" type="Node2D" parent="Cells"]
position = Vector2(473, 149)
script = ExtResource("1_yyih5")
column = 2

[node name="ColorRect" type="ColorRect" parent="Cells/Cell1x2"]
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(20, 20)

[node name="Cell1x3" type="Node2D" parent="Cells"]
position = Vector2(744, 153)
script = ExtResource("1_yyih5")
column = 3

[node name="ColorRect" type="ColorRect" parent="Cells/Cell1x3"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Cell2x1" type="Node2D" parent="Cells"]
position = Vector2(231, 339)
script = ExtResource("1_yyih5")
row = 2

[node name="ColorRect" type="ColorRect" parent="Cells/Cell2x1"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Cell2x2" type="Node2D" parent="Cells"]
position = Vector2(476, 344)
script = ExtResource("1_yyih5")
row = 2
column = 2

[node name="ColorRect" type="ColorRect" parent="Cells/Cell2x2"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Cell2x3" type="Node2D" parent="Cells"]
position = Vector2(739, 353)
script = ExtResource("1_yyih5")
row = 2
column = 3

[node name="ColorRect" type="ColorRect" parent="Cells/Cell2x3"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Cell3x1" type="Node2D" parent="Cells"]
position = Vector2(228, 555)
script = ExtResource("1_yyih5")
row = 3

[node name="ColorRect" type="ColorRect" parent="Cells/Cell3x1"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Cell3x2" type="Node2D" parent="Cells"]
position = Vector2(479, 552)
script = ExtResource("1_yyih5")
row = 3
column = 2

[node name="ColorRect" type="ColorRect" parent="Cells/Cell3x2"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Cell3x3" type="Node2D" parent="Cells"]
position = Vector2(741, 543)
script = ExtResource("1_yyih5")
row = 3
column = 3

[node name="ColorRect" type="ColorRect" parent="Cells/Cell3x3"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Pieces" type="Node" parent="."]

[node name="T1P1" type="Node2D" parent="Pieces"]
position = Vector2(60, 119)
script = ExtResource("2_lvtmh")

[node name="Sprite2D" type="Sprite2D" parent="Pieces/T1P1"]
texture = ExtResource("1_r0x5m")

[node name="T1P2" type="Node2D" parent="Pieces"]
position = Vector2(58, 211)
script = ExtResource("2_lvtmh")
size = 2

[node name="Sprite2D" type="Sprite2D" parent="Pieces/T1P2"]
texture = ExtResource("2_3mrqo")

[node name="T1P3" type="Node2D" parent="Pieces"]
position = Vector2(60, 301)
script = ExtResource("2_lvtmh")
size = 3

[node name="Sprite2D" type="Sprite2D" parent="Pieces/T1P3"]
texture = ExtResource("3_joorw")

[node name="T1P4" type="Node2D" parent="Pieces"]
position = Vector2(61, 393)
script = ExtResource("2_lvtmh")
size = 4

[node name="Sprite2D" type="Sprite2D" parent="Pieces/T1P4"]
texture = ExtResource("4_2vekm")

[node name="T1P5" type="Node2D" parent="Pieces"]
position = Vector2(59, 483)
script = ExtResource("2_lvtmh")
size = 5

[node name="Sprite2D" type="Sprite2D" parent="Pieces/T1P5"]
texture = ExtResource("5_yx171")

[node name="T1P6" type="Node2D" parent="Pieces"]
position = Vector2(61, 569)
script = ExtResource("2_lvtmh")
size = 6

[node name="Sprite2D" type="Sprite2D" parent="Pieces/T1P6"]
texture = ExtResource("6_yhmtn")

[node name="T2P1" type="Node2D" parent="Pieces"]
position = Vector2(909, 129)
script = ExtResource("2_lvtmh")
team = 2

[node name="Sprite2D" type="Sprite2D" parent="Pieces/T2P1"]
texture = ExtResource("7_gwjdr")

[node name="T2P2" type="Node2D" parent="Pieces"]
position = Vector2(907, 220)
script = ExtResource("2_lvtmh")
team = 2
size = 2

[node name="Sprite2D" type="Sprite2D" parent="Pieces/T2P2"]
texture = ExtResource("8_lvtmh")

[node name="T2P3" type="Sprite2D" parent="Pieces"]
position = Vector2(909, 306)
texture = ExtResource("9_yyih5")
script = ExtResource("2_lvtmh")
team = 2
size = 3

[node name="Sprite2D" type="Sprite2D" parent="Pieces/T2P3"]
texture = ExtResource("9_yyih5")

[node name="T2P4" type="Node2D" parent="Pieces"]
position = Vector2(910, 397)
script = ExtResource("2_lvtmh")
team = 2
size = 4

[node name="Sprite2D" type="Sprite2D" parent="Pieces/T2P4"]
texture = ExtResource("10_qjyg3")

[node name="T2P5" type="Node2D" parent="Pieces"]
position = Vector2(911, 485)
script = ExtResource("2_lvtmh")
team = 2
size = 5

[node name="Sprite2D" type="Sprite2D" parent="Pieces/T2P5"]
texture = ExtResource("11_elkpi")

[node name="T2P6" type="Node2D" parent="Pieces"]
position = Vector2(912, 568)
script = ExtResource("2_lvtmh")
team = 2
size = 6

[node name="Sprite2D" type="Sprite2D" parent="Pieces/T2P6"]
texture = ExtResource("12_0yprl")

[node name="Player1" type="Node2D" parent="."]
script = ExtResource("15_qjyg3")

[node name="Player2" type="Node2D" parent="."]
script = ExtResource("15_qjyg3")
PlayerNumber = 2

[node name="GameManager" type="Node" parent="."]
script = ExtResource("16_elkpi")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("17_0yprl")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 341.0
offset_top = 17.0
offset_right = 660.0
offset_bottom = 86.0
theme_override_font_sizes/font_size = 50
text = "Player 1 Turn"
